--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "webfontloader": "^1.6.28"
+    "react-hook-form": "^7.62.0",
+    "webfontloader": "^1.6.28",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
