--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.2.1",
+    "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.1.0",
     "antd": "^5.25.1",
     "lucide-react": "^0.508.0",
@@ -19,7 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "webfontloader": "^1.6.28",
-    "zod": "^4.0.14"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
