--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.25.1",
     "lucide-react": "^0.508.0",
     "next": "15.3.1",
+    "nodemailer": "^7.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
