--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^7.3.1",
     "antd": "^5.25.1",
     "lucide-react": "^0.508.0",
-    "next": "15.3.1",
+    "next": "^15.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
