--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@prisma/client": "^6.17.1",
     "antd": "^5.25.1",
+    "bcrypt": "^6.0.0",
     "lucide-react": "^0.508.0",
     "next": "^15.5.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
@@ -27,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -36,6 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "^10.1.2",
+    "prisma": "^6.17.1",
     "typescript": "^5"
   }
 }
