--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
     "webfontloader": "^1.6.28",
