--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.508.0",
     "next": "^15.5.4",
     "react": "^19.0.0",
