--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fullcalendar/core": "^6.1.19",
@@ -25,6 +26,7 @@
     "antd": "^5.25.1",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.508.0",
     "next": "^15.5.4",
