--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.508.0",
     "next": "^15.5.4",
