--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.508.0",
     "next": "^15.5.4",
+    "nodemailer": "^7.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-slick": "^0.31.0",
+    "resend": "^6.5.2",
     "slick-carousel": "^1.8.1",
     "webfontloader": "^1.6.28",
     "zod": "^4.0.17"
@@ -46,6 +48,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
