--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/react-vertical-timeline-component": "^3.3.6",
     "@types/webfontloader": "^1.6.38",
     "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "4.0.18",
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
