--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react-slick": "^0.23.13",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "@types/webfontloader": "^1.6.38",
+    "cypress": "13.6.3",
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
